# 3d-bin-packing-problem

./: .gitignore  .project  .pydevproject  README.rst  setup.cfg  setup.py
main_model/: __init__.py  auxiliary_methods.py  constants.py  example.py  packer.py  utils.py
src/py3dbp_ext/: __init__.py  bin.py  item.py
