[metadata]
name = py3dbp_ext
version = attr: src.VERSION
description = 3D bin packing library
long_description = file: README.txt
keywords = 3d, packing
license = Unknown
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
zip_safe = True
include_package_data = True
packages = find:

[options.package_data]
* = *.txt
