[metadata]
name = py3dbp_ext
# FIXME: broken for setuptools<46.4.0
#version = attr: py3dbp_ext.__version__
description = 3D bin packing library
long_description = file: README.txt
keywords = 3d, packing
license = Unknown
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
zip_safe = True
include_package_data = True
packages = find:
install_requires =
    setuptools >= 46.4.0

[options.package_data]
* = *.txt, *.md
