[metadata]
name = py3dbp_ext
url = https://github.com/USGM/3d-bin-packing-problem
maintainer = Alexey Pechenkin
maintainer_email = alexey@usglobalmail.com
version = attr: py3dbp_ext.__version__
description = 3D bin packing library
long_description = file: README.md
keywords =
    3d
    packing
license_file = LICENSE.txt
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
package_dir =
    =src
packages = find:


[options.packages.find]
where = src
